--- a/frontend/src/app/features/quiz/list/quiz-list.component.html
+++ b/frontend/src/app/features/quiz/list/quiz-list.component.html
@@ -1,17 +1,19 @@
 <h2>Available Quizzes</h2>
 
-<ng-container *ngIf="quizzes$ | async as quizzes; else loadingOrError">
-  <ul *ngIf="quizzes.length; else noQuizzes">
-    <li *ngFor="let q of quizzes">
-      <a [routerLink]="['/quiz', q.id]">{{ q.title }}</a>
-    </li>
-  </ul>
-</ng-container>
-
-<ng-template #loadingOrError>
+@if (quizzes$ | async; as quizzes) {
+  @if (quizzes.length) {
+    <ul>
+      @for (q of quizzes; track q) {
+        <li>
+          <a [routerLink]="['/quiz', q.id]">{{ q.title }}</a>
+        </li>
+      }
+    </ul>
+  } @else {
+    <p>Não foi encontrado nenhum quiz.</p>
+  }
+} @else {
   <p>Carregando quizzes…</p>
-</ng-template>
+}
 
-<ng-template #noQuizzes>
-  <p>Não foi encontrado nenhum quiz.</p>
-</ng-template>
+
