[Feature] Adding lots of things
Co-authored-by: Priscilla Moni <prbarmo@gmail.com>

--- a/frontend/src/app/features/home/home.component.scss
+++ b/frontend/src/app/features/home/home.component.scss
@@ -22,7 +22,7 @@
   color: #18a0fb;
 }
 
-.home-desc {
+.home-desc, .login-hint {
   color: #bfc9d1;
   margin-bottom: 1.8rem;
   font-size: 1.12rem;
