--- a/frontend/src/app/features/quiz/list/quiz-list.component.html
+++ b/frontend/src/app/features/quiz/list/quiz-list.component.html
@@ -1,19 +1,9 @@
-<h2>Available Quizzes</h2>
-
-@if (quizzes$ | async; as quizzes) {
-  @if (quizzes.length) {
-    <ul>
-      @for (q of quizzes; track q) {
-        <li>
-          <a [routerLink]="['/quiz', q.id]">{{ q.title }}</a>
-        </li>
-      }
-    </ul>
-  } @else {
-    <p>Não foi encontrado nenhum quiz.</p>
-  }
-} @else {
-  <p>Carregando quizzes…</p>
-}
-
-
+<ng-container *ngIf="quizzes$ | async as quizzes; else loading">
+  <ul *ngIf="quizzes.length; else noQuizzes">
+    <li *ngFor="let q of quizzes; trackBy: trackByQuizId">
+      <a [routerLink]="['/quiz', q.id]">{{ q.title }}</a>
+    </li>
+  </ul>
+</ng-container>
+<ng-template #loading><p>Carregando quizzes…</p></ng-template>
+<ng-template #noQuizzes><p>Não foi encontrado nenhum quiz.</p></ng-template>
