--- a/frontend/src/app/features/home/home.component.html
+++ b/frontend/src/app/features/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="home-bg">
   <mat-card class="home-card">
-    <mat-card-header>
+    <mat-card-header style="justify-content: center">
       <mat-card-title>
         <span class="home-title">LiveQuizzer</span>
       </mat-card-title>
@@ -10,19 +10,48 @@
         Desafie seus amigos em quizzes ao vivo!<br />
         Faça login para começar.
       </p>
-      <ng-container *ngIf="!user">
-        <button mat-raised-button color="primary" (click)="loginWithGoogle()">
-          <mat-icon>login</mat-icon>
-          Entrar com Google
-        </button>
-      </ng-container>
-      <ng-container *ngIf="user">
-        <p>Bem-vindo, {{ user.displayName }}</p>
-        <button mat-raised-button color="warn" (click)="logout()">
-          <mat-icon>logout</mat-icon>
-          Sair
-        </button>
-      </ng-container>
+      <div *ngIf="loggedIn; else loginActions" class="user-actions">
+        <mat-icon style="color: white; vertical-align: middle"
+          >account_circle</mat-icon
+        >
+        <span style="color: white; margin-left: 0.5rem">
+          Olá, <b>{{ userName }}</b
+          >!
+        </span>
+      </div>
+      <ng-template #loginActions>
+        <p class="login-hint">Acesse com sua conta Google:</p>
+      </ng-template>
     </mat-card-content>
+    <mat-card-actions style="justify-content: center">
+      <button
+        *ngIf="!loggedIn"
+        mat-raised-button
+        color="primary"
+        (click)="loginWithGoogle()"
+      >
+        <mat-icon>login</mat-icon>
+        Entrar com Google
+      </button>
+      <button
+        *ngIf="loggedIn"
+        mat-raised-button
+        color="warn"
+        (click)="logout()"
+      >
+        <mat-icon>logout</mat-icon>
+        Sair
+      </button>
+      <button
+        *ngIf="loggedIn"
+        mat-raised-button
+        color="accent"
+        routerLink="/quiz"
+        style="margin-left: 1rem"
+      >
+        <mat-icon>quiz</mat-icon>
+        Ir para os Quizzes
+      </button>
+    </mat-card-actions>
   </mat-card>
 </div>
